// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleImg should render correctly 1`] = `
<span
  className="className"
  style={
    Object {
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <img
    alt="alt"
    data-src="src"
    height={1000}
    src="placeHolderSrc"
    srcSet="srcSet"
    style={undefined}
    width={100}
  />
  <Animate
    durationSeconds={1}
    endStyle={
      Object {
        "opacity": 0,
      }
    }
    onCompleteStyle={
      Object {
        "display": "none",
      }
    }
    startAnimation={false}
  >
    <img
      alt="alt"
      height={1000}
      src="placeHolderSrc"
      style={
        Object {
          "background": "red",
          "left": 0,
          "position": "absolute",
          "top": 0,
        }
      }
      width={100}
    />
  </Animate>
</span>
`;

exports[`SimpleImg should render only span when place holder src is not supplied 1`] = `
<span
  className="className"
  style={
    Object {
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <img
    alt="alt"
    data-src="src"
    height={1000}
    src={undefined}
    srcSet="srcSet"
    style={undefined}
    width={100}
  />
  <Animate
    durationSeconds={1}
    endStyle={
      Object {
        "opacity": 0,
      }
    }
    onCompleteStyle={
      Object {
        "display": "none",
      }
    }
    startAnimation={false}
  >
    <span
      style={
        Object {
          "background": "red",
          "left": 0,
          "position": "absolute",
          "top": 0,
        }
      }
    />
  </Animate>
</span>
`;
